@@ -61,7 +61,8 @@ public:
 	void	clear();
 	void	image(Fl_Image *img) {Fl_Widget::image(img);}
 	void	resize(int, int, int, int);
-	int		save_jpeg(const char *);
+	int	save_jpeg(const char *);
+	int	save_png(const char *);
 };
 
 #endif
